# Popcorn-Crow-Carnival

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/game/: Collision.ts  Crow.ts  DifficultyManager.ts  Game.ts  GameState.ts  InputManager.ts  Player.ts  Powerup.ts  Renderer.ts  SaveManager.ts  types.ts
