[package]
name = "popcorn-crow-carnival"
version = "0.1.0"
description = "An endless carnival survival game"
authors = ["Popcorn Crow Carnival contributors"]
edition = "2021"

[lib]
name = "popcorn_crow_carnival_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
